polar plot added untested

--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
         <div id="progressText" class="progress-text">0%</div>
       </div>
 
+      <h2>Polar Plot</h2>
+      <canvas id="polarCanvas" class="polar-canvas" aria-label="Polar plot"></canvas>
+
       <h2>Recent Log</h2>
       <div id="log" class="log"></div>
     </section>
