3d plot of realtime data

--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
       <h2>Polar Plot</h2>
       <canvas id="polarCanvas" class="polar-canvas" aria-label="Polar plot"></canvas>
 
+      <h2>3D Polar Plot</h2>
+      <div id="polar3d" class="polar-3d" aria-label="3D polar plot"></div>
+
       <h2>Recent Log</h2>
       <div id="log" class="log"></div>
     </section>
@@ -211,6 +214,7 @@
     <span class="muted">v1</span>
   </footer>
 
+  <script src="https://cdn.plot.ly/plotly-2.30.0.min.js"></script>
   <script src="./app.js"></script>
 </body>
 </html>
