--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <hr />
 
       <h2>Optional: Device / Supabase</h2>
+      
       <div class="form-grid">
         <label>
           Device mode
@@ -115,11 +116,11 @@
 
         <label>
           Supabase URL
-          <input id="sbUrl" type="text" placeholder="https://xxxx.supabase.co" />
+          <input id="sbUrl" type="text" value="https://hsvctxongbvtnlofsazd.supabase.co" placeholder="https://xxxx.supabase.co" />
         </label>
         <label>
           Supabase anon key
-          <input id="sbKey" type="password" placeholder="eyJhbGci..." />
+          <input id="sbKey" type="password" value="sb_publishable_aZWobGm_WPP-H0vxx7VILA_6qiAFtIq" placeholder="eyJhbGci..." />
         </label>
 
         <label>
@@ -158,6 +159,10 @@
         <div class="stat">
           <div class="k">Point</div>
           <div id="stIndex" class="v">0 / 0</div>
+        </div>
+        <div class="stat">
+          <div class="k">Session</div>
+          <div id="stSessionId" class="v">—</div>
         </div>
         <div class="stat">
           <div class="k">OK</div>
