added error and retry option

--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
         <div id="progressText" class="progress-text">0%</div>
       </div>
 
+      <div class="telemetry-row">
+        <div id="telemetryStatus" class="telemetry-status hidden"></div>
+        <button id="btnRetry" class="btn danger ghost hidden" disabled>Retry</button>
+      </div>
+
       <h2>Polar Plot</h2>
       <canvas id="polarCanvas" class="polar-canvas" aria-label="Polar plot"></canvas>
 
