sessionid field working

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
           <input id="dwellMs" type="number" value="250" step="10" />
         </label>
         <label>
-          device_id / sensor_id
+          DeviceID
           <input id="sbDeviceId" type="text" value="dev1" />
+        </label>
+        <label>
+          Custom Session ID
+          <input id="customSessionId" type="text" placeholder="8-char session id" />
         </label>
       </div>
 
