ready for msmt with fetch

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <button id="btnStart" class="btn primary">Start</button>
         <button id="btnPause" class="btn">Pause</button>
         <button id="btnStop" class="btn danger">Stop</button>
+        <button id="btnFetchSession" class="btn">Fetch</button>
       </div>
 
       <hr />
